--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,14 +147,13 @@
         android:id="@+id/listView"
         />
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroupMaritalStatus"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/studentSpinner"
-        />
-
+<Spinner
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/radioGroupMaritalStatus"
+    android:layout_centerHorizontal="true"
+    android:entries="@array/student_list"
+    android:id="@+id/student_list"
+    />
 
 </RelativeLayout>
