--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/Context_View"
+    >
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -155,5 +157,31 @@
     android:entries="@array/student_list"
     android:id="@+id/student_list"
     />
+
+    <!--Floating button from Material Design-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/ic_add"
+        android:backgroundTint="@color/purple_200"
+        app:backgroundTint="@color/white"
+        app:rippleColor="#fff"
+        android:id="@+id/fab"
+        />
+<!--    Snack Bar Button-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="show snackbar"
+        android:layout_below="@+id/student_list"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:id="@+id/show_snack_bar"
+        />
+
 
 </RelativeLayout>
