--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,6 +11,6 @@
         android:title="setting"
         android:id="@+id/alermIcon"
         app:showAsAction="always"
-        android:icon="@drawable/ic_alerm"/>
+        android:icon="@drawable/ic_add"/>
 
 </menu>
