--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,4 +207,18 @@
                 />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
+
+<!--    Recycler View -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="62dp"
+        android:layout_height="217dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="138dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:id="@+id/recyClerView"
+        />
+
 </RelativeLayout>
